# wingxtra-de-telemetry-plugin

./: README.md  install.sh  main.py  pyproject.toml
deploy/: README_DEPLOY.md  wingxtra-telemetry.env.example  wingxtra-telemetry.service
tests/: test_config.py  test_databus_client.py  test_databus_module.py  test_main_9102.py  test_main_databus_mode.py  test_mapper.py  test_sender.py  test_smoke_simulation.py
wingxtra_plugin/: __init__.py  config.py  databus_client.py  sender.py  simulate.py  sniffer.py  telemetry_mapper.py
wingxtra_plugin/databus_lib/: __init__.py  colors.py  de_facade_base.py  de_module.py  messages.py  udpClient.py
